--- a/index.css
+++ b/index.css
@@ -18,14 +18,14 @@ body {
     font-feature-settings: 'liga';
     margin: 0;
     user-select: none;
-
+    background-color: #f5f5f5;
     transform-style: preserve-3d;
-    transform: perspective(1000px);
+    transform: perspective(100000px);
     position: relative;
 }
 
 .graph {
-    border: 1px solid lightgray;
+  /*  border: 1px solid lightgray;*/
     width: 90vw;
     height: 90vh;
     position: absolute;
@@ -40,11 +40,13 @@ body {
 }
 
 .graph.is-3d {
-    transform: rotateX(45deg) scale(0.5);
-    background: hsla(0, 0%, 90%, 0.5);
+/*    transform: rotateX(45deg) scale(0.5);*/
+/*    background: hsla(0, 0%, 90%, 0.5);*/
+    transform: scale(0.7);
+    top: 40vh;
 }
 
-.graph.is-3d:hover {
+.graph.is-3d:hover > #wireframes {
     border: 1px solid #2196F3;
     background: hsla(207, 90%, 54%, 0.2);
 }
